[package]
name = "logarithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
checked_decimal_macro = "0.1.4"
ndarray = "0.15.4"
thiserror = "1.0.24"
num-traits = "0.2.15"
uint = "0.9"

[dev-dependencies]
criterion = "0.3.6"
proptest = { version = "1.0.0" }

[[bench]]
name = "ln_benchmark"
harness = false

[[bench]]
name = "msb_benchmark"
harness = false